add external dns for pihole

--- a/kubernetes/apps/network/pihole-dns/app/kustomization.yaml
+++ b/kubernetes/apps/network/pihole-dns/app/kustomization.yaml
@@ -2,13 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: network
-
-components:
-- ../../components/alerts
-
 resources:
-- ./namespace.yaml
-- ./echo/ks.yaml
-- ./pihole-dns/ks.yaml
-- ./envoy-gateway/ks.yaml
+- ./externalsecret.yaml
+- ./helmrelease.yaml
+- ./ocirepository.yaml
+- ./prometheusrule.yaml
