--- a/ansible/inventory/group_vars/kubernetes/main.yaml
+++ b/ansible/inventory/group_vars/kubernetes/main.yaml
@@ -7,6 +7,8 @@ apt_install_packages:
 - dnsutils
 - iputils-ping
 - python3-kubernetes
+- open-iscsi
+- nfs-common
 - python3-yaml
 - rsync
 - conntrack
