--- a/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-- ./ocirepository.yaml
-- ./helmrelease.yaml
-- ./networking.yaml
+- ./externalsectret.yaml
+- ./clickhouse-installation.yaml
