--- a/kubernetes/apps/database/clickhouse-operator/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: grafana
+  name: clickhouse
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
