--- a/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
@@ -4,5 +4,19 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ./externalsectret.yaml
+- ./externalsecret.yaml
 - ./clickhouse-installation.yaml
+
+configMapGenerator:
+- name: clickhouse-config-d-logger
+  files:
+  - resources/config.d-logger.xml
+- name: clickhouse-config-d-path
+  files:
+  - resources/config.d-path.xml
+- name: clickhouse-config-d-server
+  files:
+  - resources/config.d-server.xml
+- name: clickhouse-users-d-clickhouse
+  files:
+  - resources/users.d-clickhouse.xml
