add clickhouse tcp route

--- a/kubernetes/apps/network/pihole-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/pihole-dns/app/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
     sources:
     - crd
     - gateway-httproute
+    - gateway-tcproute
     txtOwnerId: default
     txtPrefix: k8s.
     domainFilters:
