--- a/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
@@ -4,5 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- ./dnsendpoint.yaml
+- ./tcproute.yaml
 - ./externalsecret.yaml
 - ./clickhouse-installation.yaml
