--- a/kubernetes/apps/network/envoy-gateway/app/envoy.yaml
+++ b/kubernetes/apps/network/envoy-gateway/app/envoy.yaml
@@ -73,6 +73,12 @@ spec:
       certificateRefs:
       - kind: Secret
         name: timcasa-me-tls
+  - name: tcp
+    protocol: TCP
+    port: 9000
+    allowedRoutes:
+      namespaces:
+        from: All
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
 apiVersion: gateway.envoyproxy.io/v1alpha1
