--- a/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/kustomization.yaml
@@ -3,6 +3,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+generatorOptions:
+  disableNameSuffixHash: true
+
+configMapGenerator:
+- name: clickhouse-config-logger
+  files:
+  - config.d/logger.xml
+- name: clickhouse-config-path
+  files:
+  - config.d/path.xml
+- name: clickhouse-config-server
+  files:
+  - config.d/server.xml
+- name: clickhouse-config-users
+  files:
+  - config.d/users.xml
+
 resources:
 - ./dnsendpoint.yaml
 - ./tcproute.yaml
