--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -9,6 +9,7 @@ components:
 
 resources:
 - ./namespace.yaml
+- ./certificates/ks.yaml
 - ./echo/ks.yaml
 - ./pihole-dns/ks.yaml
 - ./envoy-gateway/ks.yaml
