--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,15 +2,14 @@
 #-- General settings  ---#
 command_warnings = True
 deprecation_warnings = True
-error_on_undefined_vars = True
 force_color = True
 nocows = True
 system_warnings = True
-stdout_callback = yaml
+# stdout_callback = yaml
 interpreter_python = /usr/bin/python3
 inventory = inventory
 gathering = smart
-ansible_managed = "Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S"
+
 
 #--- Files/Directory settings ---#
 log_path = /dev/null
