--- a/ansible/inventory/group_vars/kubernetes/main.yaml
+++ b/ansible/inventory/group_vars/kubernetes/main.yaml
@@ -18,8 +18,7 @@ k3s_release_version: "v1.30.3+k3s1"
 k3s_install_hard_links: true
 k3s_become: true
 k3s_debug: false
-k3s_primary_control_node: nexus
-k3s_registration_address: "{{ hostvars[k3s_primary_control_node].ansible_host | default('192.168.1.9') }}"
+k3s_registration_address: "{{ hostvars[k3s_primary_control_node].ansible_host}}"
 k3s_cluster_cidr: "10.42.0.0/16"
 k3s_service_cidr: "10.43.0.0/16"
 k3s_allow_schedule_on_control: true
