--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -2,6 +2,8 @@ all:
   children:
     kubernetes:
       hosts:
+        quasar:
+          ansible_host: 192.168.1.13
         nexus:
           ansible_host: 192.168.1.9
         atlas:
@@ -9,9 +11,6 @@ all:
       children:
         controller:
           hosts:
-            nexus: {}
-            atlas: {}
-        worker:
-          hosts:
+            quasar: {}
             nexus: {}
             atlas: {}
