--- a/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -17,10 +17,10 @@ spec:
       cluster:
         networkPolicy: false
       components:
-        - source-controller
-        - kustomize-controller
-        - helm-controller
-        - notification-controller
+      - source-controller
+      - kustomize-controller
+      - helm-controller
+      - notification-controller
       sync:
         kind: GitRepository
         url: https://github.com/spike442/homelab
@@ -29,71 +29,71 @@ spec:
         interval: 1h
       kustomize:
         patches:
-          - # Enable Helm repositories caching
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --helm-cache-max-size=10
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --helm-cache-ttl=60m
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --helm-cache-purge-interval=5m
-            target:
-              kind: Deployment
-              name: source-controller
-          - # Cache Secrets and ConfigMaps
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --feature-gates=CacheSecretsAndConfigMaps=true
-            target:
-              kind: Deployment
-              name: source-controller
-          - # Flux near OOM detection for Helm
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --feature-gates=OOMWatch=true
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --oom-watch-memory-threshold=95
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --oom-watch-interval=500ms
-            target:
-              kind: Deployment
-              name: helm-controller
-          - # Disable chart digest tracking
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --feature-gates=DisableChartDigestTracking=true
-            target:
-              kind: Deployment
-              name: helm-controller
-          - # Controller-level SOPS decryption
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --sops-age-secret=sops-age-secret
-            target:
-              kind: Deployment
-              name: kustomize-controller
-          - # Watch configmaps and secrets attached to HelmReleases and Kustomizations
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --watch-configs-label-selector=owner!=helm
-            target:
-              kind: Deployment
-              name: (helm-controller|kustomize-controller)
-          - # Cancel health checks on new Kustomizations revisions
-            patch: |-
-              - op: add
-                path: /spec/template/spec/containers/0/args/-
-                value: --feature-gates=CancelHealthCheckOnNewRevision=true
-            target:
-              kind: Deployment
-              name: kustomize-controller
+        # Enable Helm repositories caching
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --helm-cache-max-size=10
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --helm-cache-ttl=60m
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --helm-cache-purge-interval=5m
+          target:
+            kind: Deployment
+            name: source-controller
+        # Cache Secrets and ConfigMaps
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --feature-gates=CacheSecretsAndConfigMaps=true
+          target:
+            kind: Deployment
+            name: source-controller
+        # Flux near OOM detection for Helm
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --feature-gates=OOMWatch=true
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --oom-watch-memory-threshold=95
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --oom-watch-interval=500ms
+          target:
+            kind: Deployment
+            name: helm-controller
+        # Disable chart digest tracking
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --feature-gates=DisableChartDigestTracking=true
+          target:
+            kind: Deployment
+            name: helm-controller
+        # Controller-level SOPS decryption
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --sops-age-secret=sops-age-secret
+          target:
+            kind: Deployment
+            name: kustomize-controller
+        # Watch configmaps and secrets attached to HelmReleases and Kustomizations
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --watch-configs-label-selector=owner!=helm
+          target:
+            kind: Deployment
+            name: (helm-controller|kustomize-controller)
+        # Cancel health checks on new Kustomizations revisions
+        - patch: |-
+            - op: add
+              path: /spec/template/spec/containers/0/args/-
+              value: --feature-gates=CancelHealthCheckOnNewRevision=true
+          target:
+            kind: Deployment
+            name: kustomize-controller
