--- a/kubernetes/apps/database/clickhouse-operator/cluster/clickhouse-installation.yaml
+++ b/kubernetes/apps/database/clickhouse-operator/cluster/clickhouse-installation.yaml
@@ -103,7 +103,7 @@ spec:
         resources:
           requests:
             storage: 20Gi
-        storageClassName: longhorn
+        storageClassName: nfs
   configuration:
     clusters:
     - name: main
