--- a/ansible/playbooks/install.yaml
+++ b/ansible/playbooks/install.yaml
@@ -1,26 +1,3 @@
 ---
-- name: K3s Cluster Install
-  hosts: kubernetes
-  any_errors_fatal: true
-  become: true
-  gather_facts: true
-
-  pre_tasks:
-    - name: Pausing for 2 seconds...
-      ansible.builtin.pause:
-        seconds: 2
-
-  tasks:
-    - name: Check if k3s is installed
-      ansible.builtin.stat:
-        path: /etc/rancher/k3s/k3s.yaml
-      register: k3s_check_installed
-      check_mode: false
-
-    - name: Install Kubernetes
-      ansible.builtin.include_role:
-        name: xanmanning.k3s
-        public: true
-      vars:
-        k3s_state: installed
-      when: not k3s_check_installed.stat.exists
+- name: Install K3s
+  ansible.builtin.import_playbook: k3s.orchestration.site
