--- a/ansible/requirements.yaml
+++ b/ansible/requirements.yaml
@@ -1,15 +1,13 @@
 ---
 collections:
-  - name: community.general
-    version: 9.5.0
-  - name: ansible.utils
-    version: 5.1.2
-  - name: kubernetes.core
-    version: 5.0.0
-  - name: ansible.posix
-    version: 1.6.1
-roles:
-  - name: xanmanning.k3s
-    scm: git
-    src: https://github.com/PyratLabs/ansible-role-k3s.git
-    version: v3.4.4
+- name: community.general
+  version: 9.5.0
+- name: ansible.utils
+  version: 5.1.2
+- name: kubernetes.core
+  version: 5.0.0
+- name: ansible.posix
+  version: 1.6.1
+- name: https://github.com/k3s-io/k3s-ansible.git
+  type: git
+  version: 1.1.1
